<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/about_background"
    android:clipChildren="false"
    android:clipToPadding="false">

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/view"
        android:layout_width="691px"
        android:layout_height="694px"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:alpha="0.7"
        android:background="@drawable/bg_btn_gray"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginStart="@dimen/btn_height"
            android:layout_marginTop="@dimen/btn_height"
            android:layout_marginEnd="@dimen/btn_height"
            android:layout_marginBottom="@dimen/menu_margin" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80px"
            android:text="@string/user_login"
            android:textColor="@color/commom_all_white"
            android:textSize="48px"
            android:padding="5px"
            android:visibility="visible" />

        <!--账号-->
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/id"
            style="@style/SettingEditAutoLinearLayout"
            android:layout_marginTop="100px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:padding="5px"
                android:layout_gravity="center"
                android:textColor="@color/commom_all_white"
                android:textSize="35px" />

            <EditText
                android:id="@+id/et_account"
                style="@style/SettingEditTextStyle"
                android:hint="@string/input_account_hint"
                android:nextFocusDown="@+id/ed_pwd"
                android:text="admin" />

        </com.zhy.autolayout.AutoLinearLayout>

        <!--密码-->
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/pwd"
            style="@style/SettingEditAutoLinearLayout"
            android:layout_marginTop="80px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:padding="5px"
                android:layout_gravity="center"
                android:textColor="@color/commom_all_white"
                android:textSize="35px" />

            <EditText
                android:id="@+id/et_pwd"
                style="@style/SettingEditTextStyle"
                android:hint="@string/input_password_hint"
                android:inputType="textPassword"
                android:maxLength="18"
                android:layout_gravity="center"
                android:nextFocusUp="@id/et_account"
                android:nextFocusDown="@id/tv_confirm" />
        </com.zhy.autolayout.AutoLinearLayout>

        <!--确认，取消按钮-->
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60px"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingLeft="160px"
            android:paddingRight="120px"
            android:visibility="visible">

            <Button
                android:id="@+id/tv_confirm"
                style="@style/SettingBtStyle"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:nextFocusLeft="@id/tv_cancle"
                android:nextFocusRight="@id/tv_cancle"
                android:nextFocusUp="@id/et_pwd"
                android:text="@string/ok" />

            <Button
                android:id="@+id/tv_cancle"
                style="@style/SettingBtStyle"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:nextFocusLeft="@id/tv_confirm"
                android:nextFocusRight="@id/tv_confirm"
                android:nextFocusUp="@id/et_pwd"
                android:text="@string/cancel" />

        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/set_setting"
        android:layout_width="100px"
        android:layout_height="100px"
        android:layout_alignEnd="@id/view"
        android:layout_alignStart="@id/view"
        android:layout_alignBottom="@id/view"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="20px"
        android:background="@color/Transparent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:visibility="gone"
        android:text="@string/set_setting"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size" />
</com.zhy.autolayout.AutoRelativeLayout>