<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:alpha="0.7"
        android:background="#000000"
        android:gravity="center"
        android:layout_marginBottom="@dimen/btn_menu_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/menu_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center"
            android:nextFocusLeft="@id/menu_service"
            android:nextFocusRight="@id/menu_music"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_tv"
                style="@style/NewBtnStyle"
                android:nextFocusLeft="@id/image_service"
                android:nextFocusRight="@id/image_music"
                android:src="@mipmap/tv" />

            <TextView
                android:id="@+id/text_tv"
                style="@style/NewTextStyle"
                android:text="@string/menu_multimedia" />
        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/menu_music"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="@dimen/menu_margin_start"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_music"
                android:src="@mipmap/music"
                android:nextFocusLeft="@id/image_tv"
                android:nextFocusRight="@id/image_apower_mirror"
                style="@style/NewBtnStyle" />

            <TextView
                android:id="@+id/text_music"
                android:text="@string/menu_music"
                style="@style/NewTextStyle" />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/menu_apower_mirror"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="@dimen/menu_margin_start"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_apower_mirror"
                android:src="@mipmap/apower_mirror"
                android:nextFocusLeft="@id/image_music"
                android:nextFocusRight="@id/image_dining"
                style="@style/NewBtnStyle" />

            <TextView
                android:id="@+id/text_apower_mirror"
                android:text="@string/menu_apower_mirror"
                style="@style/NewTextStyle" />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/menu_dining"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="@dimen/menu_margin_start"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_dining"
                android:src="@mipmap/dining"
                android:nextFocusLeft="@id/image_apower_mirror"
                android:nextFocusRight="@id/image_service"
                style="@style/NewBtnStyle" />

            <TextView
                android:id="@+id/text_dinging"
                android:text="@string/menu_dining"
                style="@style/NewTextStyle" />
        </com.zhy.autolayout.AutoLinearLayout>
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/menu_service"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="@dimen/menu_margin_start"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_service"
                android:src="@mipmap/hotel"
                android:nextFocusLeft="@id/image_dining"
                android:nextFocusRight="@id/image_tv"
                style="@style/NewBtnStyle" />

            <TextView
                android:id="@+id/text_service"
                android:text="@string/menu_service"
                style="@style/NewTextStyle" />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>